# MARIS

./: .gitignore  README.md  pyproject.toml
cli/: maris_cli.py
docs/: enhanced-force-modules.md  simulation-enhancements.md  thruster-capabilities.md
maris/: __init__.py
maris/control/: manual.py  pid.py  rate_provider.py
maris/core/: exceptions.py  types.py  validation.py
maris/environment/: __init__.py  providers.py
maris/forces/: base.py  bow_thruster.py  current.py  hull.py  propulsion.py  rudder.py  stern_thruster.py  wind.py
maris/io/: results.py  scenario.py  ship.py
maris/models/mmg3dof/: model.py
maris/sim/: runner.py
maris/viz/: plot2d.py
spec/examples/: scenario_cross_coupling.json  scenario_harbor_entry.json  scenario_propeller_efficiency.json  scenario_rudder_stall.json  scenario_shallow_water.json  scenario_thruster_demo.json  scenario_turning_circle.json  ship_enhanced_demo.json  ship_harbor_vessel.json  ship_kvlcc2.json
spec/schemas/: scenario.schema.json  ship.schema.json
